--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+## C
 # Prerequisites
 *.d
 
@@ -50,3 +51,56 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+## Cpp
+# Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
+
+## CMake
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+
+## binaries, and specific to project
+/zappy_gui
+/zappy_ai
+/zappy_server
+build
+unit_test
