[ADD] server => added basic project taking back from teams
will add loop another time

--- a/server/Makefile
+++ b/server/Makefile
@@ -5,7 +5,18 @@
 ## Makefile
 ##
 
-SRC	=	src/launch.c	\
+SRC	=	src/utils/strisnum.c	\
+		src/utils/set_error.c	\
+		src/utils/print_help.c	\
+		src/utils/char_in_str.c	\
+		src/utils/generate_uuid.c	\
+		src/utils/strndup_quotes.c	\
+		src/utils/free_array.c	\
+		src/utils/array_len.c	\
+		src/utils/str_to_word_array.c	\
+		src/load/parse_args.c	\
+		src/load/create_server.c	\
+		src/launch.c	\
 
 SRC_MAIN	=	src/main.c
 
@@ -24,13 +35,13 @@ override CFLAGS	=	-W -Wall -Wextra -Wpedantic
 
 override CPPFLAGS	=	-I./include/
 
-override LDLIBS	=	-lcriterion -lgcov
+override LDLIBS	=	-luuid
 
 all:	../$(NAME)
 .PHONY:	all
 
 ../$(NAME):	$(OBJ)
-	$(CC) -o $(NAME) $(OBJ)
+	$(CC) -o $(NAME) $(OBJ) $(LDLIBS)
 	mv $(NAME) ..
 
 debug: fclean
@@ -51,6 +62,7 @@ fclean:	clean
 
 tests_run::	CPPFLAGS	+=	--coverage
 tests_run::	CFLAGS	+=	-fprofile-arcs -ftest-coverage
+tests_run::	LDLIBS += -lcriterion -lgcov
 tests_run::	fclean $(OBJ_TESTS)
 	gcc -o $(NAME_TESTS) $(OBJ_TESTS) $(LDLIBS)
 	-./$(NAME_TESTS)
