[ADD] server => select function
need to implement methods to add client and analyse methods

--- a/.github/workflows/zappy_server.yml
+++ b/.github/workflows/zappy_server.yml
@@ -62,7 +62,7 @@ jobs:
   run_program:
     container:
       image: epitechcontent/epitest-docker:latest
-    needs: check_coding_style
+    needs: check_cleanliness_repo
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
