[ADD] arguments handling => load all arguments in structure

--- a/server/Makefile
+++ b/server/Makefile
@@ -5,18 +5,26 @@
 ## Makefile
 ##
 
-SRC	=	src/utils/strisnum.c	\
+SRC	=	src/launch.c	\
+		src/utils/strisnum.c	\
 		src/utils/set_error.c	\
+		src/utils/array_len.c	\
 		src/utils/print_help.c	\
+		src/utils/free_array.c	\
 		src/utils/char_in_str.c	\
+		src/utils/realloc_array.c	\
 		src/utils/generate_uuid.c	\
 		src/utils/strndup_quotes.c	\
-		src/utils/free_array.c	\
-		src/utils/array_len.c	\
 		src/utils/str_to_word_array.c	\
 		src/load/parse_args.c	\
 		src/load/create_server.c	\
-		src/launch.c	\
+		src/load/options/x_handler.c	\
+		src/load/options/h_handler.c	\
+		src/load/options/f_handler.c	\
+		src/load/options/c_handler.c	\
+		src/load/options/y_handler.c	\
+		src/load/options/n_handler.c	\
+		src/load/options/p_handler.c	\
 		src/server/server_loop.c	\
 		src/server/handle_signal.c	\
 
