[ADD] summons => functions to have some sort of circular buffering with summons
not accepting more than 10, and executing them in the order they were
recieved

need to add a time system to block the execution of the next commands if
needed

--- a/server/Makefile
+++ b/server/Makefile
@@ -27,6 +27,9 @@ SRC	=	src/launch.c	\
 		src/load/options/p_handler.c	\
 		src/server/server_loop.c	\
 		src/server/handle_signal.c	\
+		src/server/summons/add_summon.c	\
+		src/server/summons/pop_summon.c	\
+		src/server/summons/get_summon.c	\
 
 SRC_MAIN	=	src/main.c
 
