[ADD] client => functions related to client linked list
creation of a new client when one is connecting, deletion of a node,
funtions to find one by fd or uuid

--- a/server/Makefile
+++ b/server/Makefile
@@ -30,6 +30,10 @@ SRC	=	src/launch.c	\
 		src/server/summons/add_summon.c	\
 		src/server/summons/pop_summon.c	\
 		src/server/summons/get_summon.c	\
+		src/server/client/delete_client_node.c	\
+		src/server/client/connect_new_client.c	\
+		src/server/client/add_client_node.c	\
+		src/server/client/find_client.c	\
 
 SRC_MAIN	=	src/main.c
 
