[ADD] server/clock => added a tick systemn and a clock
won't be changed if there's a sleep, and return the number of ticks that
have passed since the beginning of the program

--- a/server/Makefile
+++ b/server/Makefile
@@ -34,6 +34,7 @@ SRC	=	src/launch.c	\
 		src/server/client/connect_new_client.c	\
 		src/server/client/add_client_node.c	\
 		src/server/client/find_client.c	\
+		src/server/clock/gettickselapsed.c	\
 
 SRC_MAIN	=	src/main.c
 
