[ADD] Add Ring Buffer class and it's implementation, I want to die

--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -170,6 +170,7 @@ add_executable(
     src/Player/Player.cpp
     src/Player/PlayerManager.cpp
     src/GuiClient/GuiClient.cpp
+    src/RingBuffer.cpp
     )
 
 # rules for zappy_gui project
