[FIX] Makefile => compilation
forgot to add a file to be compiled

--- a/server/Makefile
+++ b/server/Makefile
@@ -57,6 +57,7 @@ SRC	=	src/launch.c	\
 		src/server/summons/command_gui/msz_func.c	\
 		src/server/summons/get_summon.c	\
 		src/server/clock/gettickselapsed.c	\
+		src/server/clock/add_ticks_occupied.c	\
 		src/server/clock/update_ticks_clients.c	\
 		src/server/server_loop.c	\
 		src/server/handle_signal.c	\
