--- a/server/Makefile
+++ b/server/Makefile
@@ -79,6 +79,8 @@ SRC	=	src/launch.c	\
 		src/server/client/find_team.c	\
 		src/server/client/find_client.c	\
 		src/server/client/add_client_to_team.c	\
+		src/server/client/kill_player.c	\
+		src/server/client/starve_players.c	\
 
 SRC_MAIN	=	src/main.c
 
