--- a/server/Makefile
+++ b/server/Makefile
@@ -5,33 +5,65 @@
 ## Makefile
 ##
 
+SRC_UTILS	=	src/utils/strisnum.c	\
+				src/utils/array_len.c	\
+				src/utils/set_error.c	\
+				src/utils/print_help.c	\
+				src/utils/free_array.c	\
+				src/utils/char_in_str.c	\
+				src/utils/realloc_array.c	\
+				src/utils/generate_uuid.c	\
+				src/utils/strndup_quotes.c	\
+				src/utils/str_to_word_array.c	\
+				src/utils/delete_from_array.c	\
+
+SRC_LOAD	=	src/load/options/f_handler.c	\
+				src/load/options/x_handler.c	\
+				src/load/options/h_handler.c	\
+				src/load/options/c_handler.c	\
+				src/load/options/y_handler.c	\
+				src/load/options/n_handler.c	\
+				src/load/options/p_handler.c	\
+				src/load/parse_args.c	\
+				src/load/update_server_with_args.c	\
+				src/load/create_server.c	\
+
+SRC_SUMMONS	=	src/server/summons/command_ia/dprint_tile.c	\
+				src/server/summons/command_ia/broadcast_func.c	\
+				src/server/summons/command_ia/inventory_func.c	\
+				src/server/summons/command_ia/look_func.c	\
+				src/server/summons/command_ia/set_func.c	\
+				src/server/summons/command_ia/left_func.c	\
+				src/server/summons/command_ia/right_func.c	\
+				src/server/summons/command_ia/take_func.c	\
+				src/server/summons/command_ia/incantation_func.c	\
+				src/server/summons/command_ia/eject_func.c	\
+				src/server/summons/command_ia/connect_nbr_func.c	\
+				src/server/summons/command_ia/forward_func.c	\
+				src/server/summons/command_ia/fork_func.c	\
+				src/server/summons/add_summon.c	\
+				src/server/summons/handle_summon.c	\
+				src/server/summons/pop_summon.c	\
+				src/server/summons/serv_cli/client_command.c	\
+				src/server/summons/serv_cli/send_toall_guicli.c	\
+				src/server/summons/command_gui/gui_connect_func.c	\
+				src/server/summons/command_gui/sgt_func.c	\
+				src/server/summons/command_gui/plv_func.c	\
+				src/server/summons/command_gui/ppo_func.c	\
+				src/server/summons/command_gui/bct_func.c	\
+				src/server/summons/command_gui/sst_func.c	\
+				src/server/summons/command_gui/tna_func.c	\
+				src/server/summons/command_gui/pin_func.c	\
+				src/server/summons/command_gui/mct_func.c	\
+				src/server/summons/command_gui/msz_func.c	\
+				src/server/summons/get_summon.c	\
+
 SRC	=	src/launch.c	\
-		src/utils/strisnum.c	\
-		src/utils/set_error.c	\
-		src/utils/print_help.c	\
-		src/utils/delete_from_array.c	\
-		src/utils/char_in_str.c	\
-		src/utils/generate_uuid.c	\
-		src/utils/strndup_quotes.c	\
-		src/utils/free_array.c	\
-		src/utils/array_len.c	\
-		src/utils/realloc_array.c	\
-		src/utils/str_to_word_array.c	\
 		src/map/generate_map.c	\
 		src/map/change_player_pos.c	\
 		src/map/utils_map.c	\
 		src/map/update_map.c	\
 		src/map/delete_eggs_from_tile.c	\
-		src/load/options/f_handler.c	\
-		src/load/options/x_handler.c	\
-		src/load/options/h_handler.c	\
-		src/load/options/c_handler.c	\
-		src/load/options/y_handler.c	\
-		src/load/options/n_handler.c	\
-		src/load/options/p_handler.c	\
-		src/load/parse_args.c	\
-		src/load/update_server_with_args.c	\
-		src/load/create_server.c	\
 		src/destroy/destroy_server.c	\
 		src/destroy/destroy_teams.c	\
 		src/destroy/destroy_clients.c	\
@@ -41,34 +73,6 @@ SRC	=	src/launch.c	\
 		src/server/eggs/find_egg_by_nb.c	\
 		src/server/eggs/add_egg_to_team.c	\
 		src/server/eggs/delete_egg_from_team.c	\
-		src/server/summons/command_ia/dprint_tile.c	\
-		src/server/summons/command_ia/broadcast_func.c	\
-		src/server/summons/command_ia/inventory_func.c	\
-		src/server/summons/command_ia/look_func.c	\
-		src/server/summons/command_ia/set_func.c	\
-		src/server/summons/command_ia/left_func.c	\
-		src/server/summons/command_ia/right_func.c	\
-		src/server/summons/command_ia/take_func.c	\
-		src/server/summons/command_ia/incantation_func.c	\
-		src/server/summons/command_ia/eject_func.c	\
-		src/server/summons/command_ia/connect_nbr_func.c	\
-		src/server/summons/command_ia/forward_func.c	\
-		src/server/summons/add_summon.c	\
-		src/server/summons/handle_summon.c	\
-		src/server/summons/pop_summon.c	\
-		src/server/summons/serv_cli/client_command.c	\
-		src/server/summons/serv_cli/send_toall_guicli.c	\
-		src/server/summons/command_gui/gui_connect_func.c	\
-		src/server/summons/command_gui/sgt_func.c	\
-		src/server/summons/command_gui/plv_func.c	\
-		src/server/summons/command_gui/ppo_func.c	\
-		src/server/summons/command_gui/bct_func.c	\
-		src/server/summons/command_gui/sst_func.c	\
-		src/server/summons/command_gui/tna_func.c	\
-		src/server/summons/command_gui/pin_func.c	\
-		src/server/summons/command_gui/mct_func.c	\
-		src/server/summons/command_gui/msz_func.c	\
-		src/server/summons/get_summon.c	\
 		src/server/clock/gettickselapsed.c	\
 		src/server/clock/add_ticks_occupied.c	\
 		src/server/clock/update_ticks.c	\
@@ -88,6 +92,7 @@ SRC	=	src/launch.c	\
 SRC_MAIN	=	src/main.c
 
 OBJ	=	$(SRC:.c=.o) $(SRC_MAIN:.c=.o)
+OBJ	+=	$(SRC_LOAD:.c=.o) $(SRC_UTILS:.c=.o) $(SRC_SUMMONS:.c=.o)
 
 SRC_TESTS	=	tests/redirect.c	\
 				tests/template.c	\
@@ -98,6 +103,7 @@ SRC_TESTS	=	tests/redirect.c	\
 				tests/tests_utils.c	\
 
 OBJ_TESTS	=	$(SRC:.c=.o)  $(SRC_TESTS:.c=.o)
+OBJ_TESTS	+=	$(SRC_LOAD:.c=.o) $(SRC_UTILS:.c=.o) $(SRC_SUMMONS:.c=.o)
 
 NAME	=	zappy_server
 
