[UNIT.TESTS] server => misc tests, solving problems that i find as i go
found some on eggs, when adding an egg to a team

--- a/server/Makefile
+++ b/server/Makefile
@@ -104,10 +104,11 @@ SRC_TESTS	=	tests/redirect.c	\
 				tests/tests_launch.c	\
 				tests/tests_utils.c	\
 				tests/template.c	\
-				tests/server/tests_clients.c	\
+				tests/server/tests_map.c	\
 				tests/server/tests_eggs.c	\
 				tests/server/tests_clock.c	\
 				tests/server/tests_misc.c	\
+				tests/server/tests_clients.c	\
 				tests/server/create_server.c	\
 
 OBJ_TESTS	=	$(SRC:.c=.o)  $(SRC_TESTS:.c=.o)
