--- a/server/Makefile
+++ b/server/Makefile
@@ -111,6 +111,7 @@ SRC_TESTS	=	tests/redirect.c	\
 				tests/server/tests_misc.c	\
 				tests/server/tests_clients.c	\
 				tests/server/create_server.c	\
+				tests/server/tests_summons_ai.c	\
 				tests/server/tests_summons_gui.c	\
 
 OBJ_TESTS	=	$(SRC:.c=.o)  $(SRC_TESTS:.c=.o)
