[ADD] Add victory screen when seg message is catch + Create SceneManager Class in order to be more coherent in the architecture

--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -180,6 +180,8 @@ add_executable(
     src/ParticleEngine/ParticleEngine.cpp
     src/Weather/WeatherManager.cpp
     src/Egg/EggManager.cpp
+    src/Scenes/Victory.cpp
+    src/Scenes/SceneManager.cpp
     )
 
 # rules for zappy_gui project
