[ADD] Add Error Panel when socket is disconnected

--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -185,6 +185,7 @@ add_executable(
     src/Scenes/SceneManager.cpp
     src/HUD/FrequencyPanel.cpp
     src/HUD/TextButton.cpp
+    src/DisconnectPanel/DisconnectPanel.cpp
     )
 
 # rules for zappy_gui project
