[FIX] server/broadcast_func => tries seems to be unsucessfull
angles aren't right and AIs can be misleaded by the broadcast, so never
joining each others

--- a/server/Makefile
+++ b/server/Makefile
@@ -141,6 +141,7 @@ debug: ../$(NAME)
 
 clean:
 	@rm -f $(OBJ) $(OBJ_TESTS)
+	@find -name "*.o" -delete
 	@find -name "*.gcno" -delete
 	@find -name "*.gcda" -delete
 .PHONY:	clean
